[gd_scene load_steps=11 format=3 uid="uid://cm2vkxu7ebt6i"]

[ext_resource type="Script" path="res://menus/start_menu.gd" id="1_phsgr"]
[ext_resource type="PackedScene" uid="uid://42jgpbvyneu0" path="res://menus/options/options.tscn" id="2_u16ru"]
[ext_resource type="Texture2D" uid="uid://j4ncepgvk4pr" path="res://menus/parallax_background/parallaxdesert_back.png" id="3_jxcpw"]
[ext_resource type="Script" path="res://menus/parallax_background/shadow_layer.gd" id="4_1fdxu"]
[ext_resource type="Texture2D" uid="uid://cxm3nlno1rv4p" path="res://menus/parallax_background/parallaxdesert_shadow.png" id="4_b5hg4"]
[ext_resource type="Texture2D" uid="uid://bff6ijl8j1wnf" path="res://menus/parallax_background/parallaxdesert_canyon.png" id="5_ol6iv"]
[ext_resource type="Script" path="res://menus/parallax_background/canyon_layer.gd" id="6_1dtjx"]
[ext_resource type="Script" path="res://menus/parallax_background/road_layer.gd" id="6_gi6n4"]
[ext_resource type="Texture2D" uid="uid://0iuucq6tyw5f" path="res://menus/parallax_background/parallaxdesert_road.png" id="6_i6ubb"]
[ext_resource type="Texture2D" uid="uid://d0asonbclj7oe" path="res://menus/parallax_background/parallaxdesert_weeds.png" id="9_2viki"]

[node name="StartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phsgr")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 508.0
offset_right = -508.0
offset_bottom = -546.0
grow_horizontal = 2
text = "Food Truck Cartel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 529.5
offset_top = 308.5
offset_right = -529.5
offset_bottom = -308.5
grow_horizontal = 2
grow_vertical = 2
text = "Get Cookin"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 555.0
offset_top = 389.0
offset_right = -555.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 457.0
offset_right = 614.0
offset_bottom = 488.0
text = "Settings
"

[node name="Options" parent="." instance=ExtResource("2_u16ru")]
process_mode = 3
visible = false
layout_mode = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(697, 299)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_jxcpw")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(697, 299)
scale = Vector2(0.2, 0.2)
motion_scale = Vector2(0, 1)
script = ExtResource("4_1fdxu")
shadow_speed = -1.0

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("4_b5hg4")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(697, 299)
scale = Vector2(0.2, 0.2)
motion_scale = Vector2(0, 1)
script = ExtResource("6_1dtjx")
Canyon_speed = -2.0

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("5_ol6iv")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(697, 299)
motion_scale = Vector2(0, 1)
script = ExtResource("6_gi6n4")
road_speed = -3.0

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_2viki")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(697, 299)
motion_scale = Vector2(0, 1)
script = ExtResource("6_gi6n4")
road_speed = -3.0

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_i6ubb")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
